homework 6 add test, corrections